--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -185,7 +185,7 @@
           <option value="sports">Sports and gym</option>
           <option value="Other">Other</option>
         </select>
-        <input type="date" name="date" required />
+        <input type="date" placeholder="Date" name="date" required />
         <input type="text" placeholder="Description" name="description" required />
         <input type="number" placeholder="Amount" name="amount" required />
         <button type="submit">Add Expense</button>
